--- a/css/main1.css
+++ b/css/main1.css
@@ -41,7 +41,20 @@
   padding-left: 1%;
   padding-right: 1%;
   padding-top: 1%;
+
+  /* background-image: -webkit-gradient(linear, left top, right top, color-stop(0.15, #94A14E), color-stop(0.15, #C5C5C5)); */
+
+
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  height: 25px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
 }
+
 
 .tracker_wrapper{
   margin: 0;
