--- a/css/main1.css
+++ b/css/main1.css
@@ -1,10 +1,10 @@
-#div_text_1{
+#div_text_1 {
   margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 30%;
-  height: 40%;
+  width: 40%;
+  height: 30%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
   padding-left: 1%;
@@ -14,13 +14,13 @@
   border: solid 0.5vw Black;
 }
 
-.slider_wrapper{
+.slider_wrapper {
   margin: 0;
   position: relative;
   top: 120%;
   left: 50%;
   width: 100%;
-  height: 20%;
+  height: 30%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
   padding-left: 1%;
@@ -30,33 +30,56 @@
   border: solid 0.5vw Black;
 }
 
-.slider{
+.slider {
   margin: 0;
   position: relative;
-  top: 50%;
+  top: 40%;
   left: 50%;
-  width: 80%;
+  width: 90%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
   padding-left: 1%;
   padding-right: 1%;
   padding-top: 1%;
-
-  /* background-image: -webkit-gradient(linear, left top, right top, color-stop(0.15, #94A14E), color-stop(0.15, #C5C5C5)); */
-
-
-  -webkit-appearance: none;  /* Override default CSS styles */
-  appearance: none;
-  height: 25px; /* Specified height */
-  background: #d3d3d3; /* Grey background */
-  outline: none; /* Remove outline */
-  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-  transition: opacity .2s;
+  padding-bottom: 1%;
+  /* -webkit-appearance: none; */
+  /* appearance: none; */
+  height: 1.5vw;
+  background: Black;
+  outline: none;
+  opacity: 0.7;
+  border-radius: 1.5vw;
 }
 
+.slider:focus {
+  outline: none;
+}
 
-.tracker_wrapper{
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 0.75vw;
+  height: 3vw;
+  background: Black;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 0.75vw;
+  height: 3vw;
+  background: Black;
+  cursor: pointer;
+}
+
+.input_allowed {
+  color: Green;
+}
+
+.input_exceeded {
+  color: Red;
+}
+
+.tracker_wrapper {
   margin: 0;
   position: relative;
   top: 120%;
@@ -70,4 +93,43 @@
   padding-top: 1%;
   font-size: 1.25vw;
   border: solid 0.5vw Black;
+}
+
+.slider_output_labels {
+    width: 90%;
+    height: 10%;
+    margin: 0;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    /* border: solid 0.1vw Black; */
+}
+
+.label_left{
+  margin: 0;
+  position: absolute;
+  text-align: left;
+  left: 25%;
+  top: 50%;
+  width: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding-left: 1%;
+  font-size: 1.5vw;
+  /* border: solid 0.2vw Red; */
+}
+.label_right{
+  margin: 0;
+  position: absolute;
+  text-align: right;
+  left: 75%;
+  top: 50%;
+  width: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding-right: 1%;
+  font-size: 1.5vw;
+  /* border: solid 0.2vw Red; */
 }
