--- a/css/main1.css
+++ b/css/main1.css
@@ -1,10 +1,11 @@
 #div_text_1 {
   margin: 0;
   position: absolute;
-  top: 50%;
+  /* overflow: scroll; */
+  top: 40%;
   left: 50%;
-  width: 40%;
-  height: 30%;
+  width: 50%;
+  height: 40%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
   padding-left: 1%;
@@ -12,6 +13,25 @@
   padding-top: 1%;
   font-size: 1.25vw;
   border: solid 0.5vw Black;
+}
+
+#proceed {
+  margin: 0;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  width: 10%;
+  /* height: 5%; */
+  text-align: center;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  font-size: 1.5vw;
+  border: solid 0.5vw Green;
+  cursor: pointer;
 }
 
 .slider_wrapper {
@@ -29,6 +49,23 @@
   font-size: 1.25vw;
   border: solid 0.5vw Black;
 }
+
+.standard_wrapper {
+  margin: 0;
+  position: relative;
+  top: 120%;
+  left: 50%;
+  width: 100%;
+  height: 30%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 1%;
+  font-size: 1.25vw;
+  border: solid 0.5vw Black;
+}
+
 
 .slider {
   margin: 0;
@@ -77,6 +114,7 @@
 
 .input_exceeded {
   color: Red;
+  font-weight: bold;
 }
 
 .tracker_wrapper {
