--- a/css/main1.css
+++ b/css/main1.css
@@ -30,9 +30,19 @@
   padding-top: 1%;
   padding-bottom: 1%;
   font-size: 1.5vw;
-  border: solid 0.5vw Green;
+  border: solid 0.5vw Black;
   cursor: pointer;
 }
+
+.button_on{
+  background-color: Green;
+}
+
+.button_off{
+  background-color: Grey;
+  border: solid 0.5vw Grey;
+}
+
 
 .slider_wrapper {
   margin: 0;
