--- a/css/main1.css
+++ b/css/main1.css
@@ -36,11 +36,12 @@
 
 .button_on{
   background-color: Green;
+  pointer-events: auto;
 }
 
 .button_off{
   background-color: Grey;
-  border: solid 0.5vw Grey;
+  pointer-events: none;
 }
 
 
@@ -129,16 +130,17 @@
 
 .tracker_wrapper {
   margin: 0;
-  position: relative;
-  top: 120%;
-  /* left: 50%; */
-  width: 100%;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  /* width: 100%; */
   height: 10%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
   padding-left: 1%;
   padding-right: 1%;
   padding-top: 1%;
+  padding-bottom: 1%;
   font-size: 1.25vw;
   border: solid 0.5vw Black;
 }
